style: styles to show scroll bar when the select component is open to avoid layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,3 +85,11 @@
     text-wrap: balance;
   }
 }
+
+html {
+  overflow-x: hidden;
+}
+
+body[data-scroll-locked] {
+  min-width: 100%;
+}
